--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>kellyxj</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Placeholder</h1>
+    <h1>Student Bio</h1>
+
+    <h2>Kelly Jiang</h2>
+
+    <img src="" width="200px" height="200px" alt="A picture of me"/>
+    <br>
+
+    <p>
+        I am 22 years old. I live in Evanston, IL.
+    </p>
+
+    <h2>Contact Info</h2>
+    <ul>
+        <li><b>Email:</b> <a href="mailto:kllyjiang@gmail.com">kllyjiang@gmail.com</a></li>
+        <li><b>GitHub:</b> <a href="https://github.com/kellyxj">https://github.com/kellyxj</a></li>
+        <li><b>Portfolio:</b> <a href=#>Coming soon</a></li>
+    </ul>
+
 </body>
 </html>
